packages/kit/test/apps/basics/src/routes/load/invalidation/forced-goto/+layout.server.js
import { increment } from '../../state.js';

export const load = () => {
	return {
		a: increment(import.meta.url)
	};
};
